# nick-devin-demo

./: FRONTEND_PLAN.md  README.md
backend/: .gitignore  Dockerfile  devin_client.py  fly.toml  issues.db  main.py  pyproject.toml  requirements.txt  test_confidence_extraction.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: Dashboard.tsx  DevinModal.tsx  IssueCard.tsx  IssueFilters.tsx  IssueList.tsx
frontend/src/lib/: api.ts  types.ts
